force-app/main/default/objects/User/fields/Active_License__c.field-meta.xml
<CustomField>
    <fullName>Active_License__c</fullName>
    <description>Producer License Information from AgentSync.</description>
    <inlineHelpText>Indicates which states reps are licensed in to sell health insurance.</inlineHelpText>
    <label>Active License</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__State_Codes</valueSetName>
    </valueSet>
</CustomField>