force-app/main/default/objects/User/fields/Back_In_Office_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Back_In_Office_Date_Time__c</fullName>
    <label>Back In Office Date/Time</label>
    <type>DateTime</type>
</CustomField>