force-app/main/default/objects/User/fields/Benefits_Class__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Class__c</fullName>
    <label>Benefits Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class 1</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Class 3</fullName>
            </value>
            <value>
                <fullName>Class 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>