force-app/main/default/objects/User/fields/BulkUserCSVDataId__c.field-meta.xml
<CustomField>
    <fullName>BulkUserCSVDataId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>BulkUserCSVDataId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>