force-app/main/default/objects/User/fields/Class_Queue__c.field-meta.xml
<CustomField>
    <fullName>Class_Queue__c</fullName>
    <label>Payroll Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class 1</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Class 3</fullName>
            </value>
            <value>
                <fullName>Class 4</fullName>
            </value>
            <value>
                <fullName>Rotation 1</fullName>
            </value>
            <value>
                <fullName>Rotation 2</fullName>
            </value>
            <value>
                <fullName>Rotation 3</fullName>
            </value>
            <value>
                <fullName>TaxRes Rotation 1 - FUTA</fullName>
            </value>
            <value>
                <fullName>TaxRes Rotation 2 - Fed WTH</fullName>
            </value>
            <value>
                <fullName>TaxRes C-Queue</fullName>
            </value>
            <value>
                <fullName>Care Payroll Class 1</fullName>
            </value>
            <value>
                <fullName>Care Payroll Class 2</fullName>
            </value>
            <value>
                <fullName>Care Payroll Class 3</fullName>
            </value>
            <value>
                <fullName>Care Benefits Class 1</fullName>
            </value>
            <value>
                <fullName>Care Benefits Class 2</fullName>
            </value>
            <value>
                <fullName>Care Benefits Class 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>