force-app/main/default/objects/User/fields/Coverage_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Effective_Date__c</fullName>
    <label>Coverage Effective Date</label>
    <type>Date</type>
</CustomField>