force-app/main/default/objects/User/fields/Default_Callback_Queue__c.field-meta.xml
<CustomField>
    <fullName>Default_Callback_Queue__c</fullName>
    <formula>IF(CONTAINS(UserRole.Name, &quot;Payroll Care&quot;),&quot;Payroll Care&quot;, IF(CONTAINS(UserRole.Name, &quot;Concierge&quot;),&quot;Concierge Pod 1&quot;,IF(CONTAINS(UserRole.Name, &quot;VIP&quot;),&quot;VIP Partner Care&quot;,IF(CONTAINS(UserRole.Name, &quot;VIP&quot;),&quot;VIP Partner Care&quot;,IF(CONTAINS(UserRole.Name, &quot;Full-Stack&quot;),&quot;Full-Stack Care&quot;,&quot;Payroll Care&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Callback Queue</label>
    <type>Text</type>
</CustomField>