force-app/main/default/objects/User/fields/Exempt_from_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User is exempt from Validation Rules</description>
    <label>Exempt from Validation Rules</label>
    <type>Checkbox</type>
</CustomField>