force-app/main/default/objects/User/fields/FSC_Homeroom_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FSC_Homeroom_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FSC Homeroom Start Date</label>
    <type>Date</type>
</CustomField>