force-app/main/default/objects/User/fields/HR_Worker_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>HR_Worker_Information_Status__c</fullName>
    <description>Status of the user on the HR Worker Information Table</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HR Worker Information Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>