force-app/main/default/objects/User/fields/Inactive_User_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Inactive_User_Date_Time__c</fullName>
    <description>Capture date/time when user is inactive</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Inactive User Date/Time</label>
    <type>DateTime</type>
</CustomField>