force-app/main/default/objects/User/fields/Individual_Queues__c.field-meta.xml
<CustomField>
    <fullName>Individual_Queues__c</fullName>
    <label>Individual Queues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Queue_List</valueSetName>
    </valueSet>
</CustomField>