force-app/main/default/objects/User/fields/Is_Api_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Api_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Api integration dedicated users ONLY.</description>
    <label>API Integration User</label>
    <type>Checkbox</type>
</CustomField>