force-app/main/default/objects/User/fields/Last_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_At__c</fullName>
    <description>The last updated HR workerinformation at</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated At</label>
    <type>Date</type>
</CustomField>