force-app/main/default/objects/User/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Used for additional comments. It is utilized in the &quot;User Audit Flow&quot; to make comments during email alerts sent to the user.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>