force-app/main/default/objects/User/fields/On_The_Floor_Date_PRC_Class_3__c.field-meta.xml
<CustomField>
    <fullName>On_The_Floor_Date_PRC_Class_3__c</fullName>
    <description>This field is used for PE&apos;s to set a date when an Advocate starts on the floor so Tableau can accurately calculate their metrics. The reason this was requested is that Advocates are in training for about a month and this lag time is affecting their metrics. (BT-6859)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is for Care PE&apos;s to place an on the floor date. This date should be when the Advocate is out of training.</inlineHelpText>
    <label>On The Floor Date (PRC Class 3)</label>
    <type>Date</type>
</CustomField>