force-app/main/default/objects/User/fields/PE__c.field-meta.xml
<CustomField>
    <fullName>PE__c</fullName>
    <description>Manager of the user so it can be used in provisioning reports.</description>
    <formula>Manager.FirstName  &amp; &quot; &quot; &amp;  Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PE</label>
    <type>Text</type>
</CustomField>