force-app/main/default/objects/User/fields/Permission_Sets_Last_Removed__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_Last_Removed__c</fullName>
    <description>Used to document the auto removal of Permission Sets and Permission Set Groups. If this is populated, AutoProvisioning - Permission Set Group Auto Assignment has performed the steps to remove any assignments.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Permission Sets Last Removed</label>
    <type>DateTime</type>
</CustomField>