force-app/main/default/objects/User/fields/PRC_Homeroom_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PRC_Homeroom_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PRC Homeroom Start Date</label>
    <type>Date</type>
</CustomField>