force-app/main/default/objects/User/fields/PureCloud_UserId__c.field-meta.xml
<CustomField>
    <fullName>PureCloud_UserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>PureCloud UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>