force-app/main/default/objects/User/fields/Slack_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Slack Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>