force-app/main/default/objects/User/fields/Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>