force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>