force-app/main/default/objects/User/validationRules/Align_role_with_department.validationRule-meta.xml
<ValidationRule>
    <fullName>Align_role_with_department</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(BLANKVALUE(Department,&apos;&apos;),
CASE(UserRole.Name,
&apos;sales&apos;,&apos;Sales&apos;,
&apos;ops&apos;,&apos;Operations&apos;,
&apos;&apos;)))</errorConditionFormula>
    <errorMessage>The department must match the user&apos;s role.</errorMessage>
</ValidationRule>