force-app/main/default/objects/User/validationRules/Lock_department.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_department</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Department) &amp;&amp;
NOT($Profile.Name = &apos;ZP System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Changes to department are restricted.</errorMessage>
</ValidationRule>