force-app/main/default/objects/User/validationRules/Lock_FisrtName_and_LastName.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_FisrtName_and_LastName</fullName>
    <active>true</active>
    <description>Lock FirstName and LastName for the vendor users</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
(ISCHANGED (FirstName) || ISCHANGED (LastName)),
$Profile.Name = &quot;Vendor CX&quot;,
NOT($User.Exempt_from_Validation_Rules__c))</errorConditionFormula>
    <errorMessage>Please reach out to your PE to update your personal information</errorMessage>
</ValidationRule>