force-app/main/default/objects/User/validationRules/Lock_title.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_title</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Title) &amp;&amp;
NOT($Profile.Name = &apos;ZP System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Changes to title are restricted.</errorMessage>
</ValidationRule>